add create team page and functionality

--- a/src/WebApplication1/Views/Teams/Index.cshtml
+++ b/src/WebApplication1/Views/Teams/Index.cshtml
@@ -19,5 +19,6 @@
             <li>@Html.DisplayFor(modelTeam => listTeam.Name) | @Html.ActionLink("Details", "Details", new { id = listTeam.TeamId })</li>
         }
     </ul>
+    <p>@Html.ActionLink("Add new team", "Create")</p>
 </body>
 </html>
