--- a/src/WebApplication1/Views/Teams/Details.cshtml
+++ b/src/WebApplication1/Views/Teams/Details.cshtml
@@ -12,7 +12,7 @@
 <body>
     <h2>Details</h2>
     <hr />
-    @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Players), Captain: @Html.DisplayFor(model => model.Captain)
+    @Html.DisplayFor(model => model.Name): @Html.DisplayFor(model => model.Players), Captain: @Html.DisplayFor(model => model.Captain)
     <p>@Html.ActionLink("Back to list", "Index")</p>
 </body>
 </html>
