add shared layout

--- a/src/WebApplication1/Views/Teams/Edit.cshtml
+++ b/src/WebApplication1/Views/Teams/Edit.cshtml
@@ -1,14 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sports";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model Sports.Models.Team
-<html>
-<head>
-    <title>Sports-Edit</title>
-</head>
-<body>
+
     <h2>Edit</h2>
     <hr />
     <h4>Edit this team: @Html.DisplayFor(model => model.Name)</h4>
@@ -29,5 +24,3 @@
         <input type="submit" value="Save"/>
     }
     <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
