--- a/src/WebApplication1/Views/Teams/Create.cshtml
+++ b/src/WebApplication1/Views/Teams/Create.cshtml
@@ -1,15 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sports";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model Sports.Models.Team
 
-<html>
-<head>
-    <title>Team - Create</title>
-</head>
-<body>
     <h2>Create</h2>
     <hr />
     <h4>Add a new team</h4>
@@ -24,5 +18,3 @@
         <input type="submit" value="Add new team" />
     }
     <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
