--- a/src/WebApplication1/Views/Teams/Delete.cshtml
+++ b/src/WebApplication1/Views/Teams/Delete.cshtml
@@ -1,16 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sports";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model Sports.Models.Team
-
-<html>
-<head>
-    <title>Sports - Delete</title>
-</head>
-<body>
 
     <h2>Are you sure you want to delete this?</h2>
     <hr />
@@ -20,5 +13,4 @@
         <input type="submit" value="Delete" />
     }
     @Html.ActionLink("Back to List", "Index")
-</body>
-</html>
+
