--- a/src/WebApplication1/Views/Teams/Details.cshtml
+++ b/src/WebApplication1/Views/Teams/Details.cshtml
@@ -1,18 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Sports";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model Sports.Models.Team
 
-<html>
-<head>
-    <title>Team - Details</title>
-</head>
-<body>
+
     <h2>Details</h2>
     <hr />
     @Html.DisplayFor(model => model.Name): @Html.DisplayFor(model => model.Players), Captain: @Html.DisplayFor(model => model.Captain)
     <p>@Html.ActionLink("Back to list", "Index")</p>
-</body>
-</html>
