add css and link from home to index

--- a/src/WebApplication1/Views/Home/Index.cshtml
+++ b/src/WebApplication1/Views/Home/Index.cshtml
@@ -10,5 +10,7 @@
 </head>
 <body>
     <h2>Welcome to Our Sports Page</h2>
+
+    <p>@Html.ActionLink("List", "Index", "Teams")</p>
 </body>
 </html>
