--- a/src/WebApplication1/Views/Teams/Delete.cshtml
+++ b/src/WebApplication1/Views/Teams/Delete.cshtml
@@ -1,9 +1,9 @@
-﻿@{
+﻿@model Sports.Models.Team
+
+@{
     ViewData["Title"] = "Sports";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@model Sports.Models.Team
 
     <h2>Are you sure you want to delete this?</h2>
     <hr />
